[package]
name = "repl"
version = "0.1.0"
authors = ["Wesley Norris <repnop@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../compiler/ast" }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
hir = { path = "../compiler/hir" }
parser = { path = "../compiler/parser" }
rustyline = "8.0.0"
structopt = "0.3.14"
typecheck = { path = "../compiler/typecheck" }
